data/derived/comb/progs/unify/prog4855.ml.out
Characters 149-153:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type (int * int) list list
       Type 'a * 'b is not compatible with type (int * int) list 
